Remove background attachment change - doesn't resolve issue on iPhone 7+ on 10.2

--- a/wp-content/themes/takeoff/css/responsive.css
+++ b/wp-content/themes/takeoff/css/responsive.css
@@ -6,7 +6,6 @@
 	.reviews {position: relative; top: 0; transform: none; width: 85%; margin: 0 auto;}
 	#intro {min-height: 100vh;}
 	section, footer {min-height: 1px;}
-	section, footer {background-attachment: inherit;}
 }
 
 @media only screen and (max-width: 480px) {
